--- a/trunk/cng1985/HtmlUI/HtmlUI.csproj
+++ b/trunk/cng1985/HtmlUI/HtmlUI.csproj
@@ -36,6 +36,8 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -47,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MyModule1.cs" />
+    <Compile Include="Products.cs" />
     <Compile Include="ServerControl1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
