--- a/trunk/cng1985/School/School.csproj
+++ b/trunk/cng1985/School/School.csproj
@@ -744,6 +744,7 @@
     <Content Include="FreeTextBox\officexp\wordcount.gif" />
     <Content Include="FreeTextBox\officexp\wordcount.over.gif" />
     <Content Include="HtmlDesign\HTMLPage1.htm" />
+    <Content Include="HtmlDesign\HTMLPage2.htm" />
     <Content Include="HtmlDesign\image\3.png" />
     <Content Include="tank\img\1.gif" />
     <Content Include="tank\img\ball.gif" />
@@ -810,9 +811,6 @@
     <None Include="webworkDataSet.xss">
       <DependentUpon>webworkDataSet.xsd</DependentUpon>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Report1.rdlc" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HtmlUI\HtmlUI.csproj">
