--- a/trunk/cng1985/god/god.csproj
+++ b/trunk/cng1985/god/god.csproj
@@ -56,6 +56,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="net\Ada.cs" />
     <Compile Include="net\HtmlWork.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
