--- a/trunk/jbpm/src/hibernate.properties
+++ b/trunk/jbpm/src/hibernate.properties
@@ -280,7 +280,7 @@ hibernate.c3p0.validate true
 
 ## Properties for external configuration of Proxool
 
-hibernate.proxool.pool_alias pool1
+#hibernate.proxool.pool_alias pool1
 
 ## Only need one of the following
 
@@ -499,7 +499,7 @@ hibernate.cache.use_query_cache false
 
 ## choose a cache implementation
 
-hibernate.cache.provider_class org.hibernate.cache.EhCacheProvider
+#hibernate.cache.provider_class org.hibernate.cache.EhCacheProvider
 #hibernate.cache.provider_class org.hibernate.cache.EmptyCacheProvider
 #hibernate.cache.provider_class org.hibernate.cache.HashtableCacheProvider
 #hibernate.cache.provider_class org.hibernate.cache.TreeCacheProvider
