--- a/trunk/show/WebRoot/WEB-INF/web.xml
+++ b/trunk/show/WebRoot/WEB-INF/web.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.5" 
-	xmlns="http://java.sun.com/xml/ns/javaee" 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
 	http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-		<!-- 用于初始化Spring容器的Listener -->
+	<!-- 用于初始化Spring容器的Listener -->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
 	<listener>
 		<listener-class>
-			org.springframework.web.context.ContextLoaderListener
-		</listener-class>
+			org.springframework.web.context.request.RequestContextListener</listener-class>
 	</listener>
+
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
@@ -20,8 +22,7 @@
 	<filter>
 		<filter-name>OpenSessionInViewFilter</filter-name>
 		<filter-class>
-			org.springframework.orm.hibernate3.support.OpenSessionInViewFilter
-		</filter-class>
+			org.springframework.orm.hibernate3.support.OpenSessionInViewFilter</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>OpenSessionInViewFilter</filter-name>
@@ -32,9 +33,7 @@
 		<!-- 配置filter名字 -->
 		<filter-name>struts2</filter-name>
 		<!-- 配置filter实现类 -->
-		<filter-class>
-			org.apache.struts2.dispatcher.FilterDispatcher
-		</filter-class>
+		<filter-class>org.apache.struts2.dispatcher.FilterDispatcher</filter-class>
 	</filter>
 	<!-- 配置filter拦截的URL -->
 	<filter-mapping>
@@ -47,7 +46,7 @@
 		<filter-name>struts2</filter-name>
 		<url-pattern>*.html</url-pattern>
 	</filter-mapping>
- 
+
 	<filter-mapping>
 		<filter-name>struts2</filter-name>
 		<url-pattern>*.jsp</url-pattern>
@@ -56,9 +55,7 @@
 
 	<filter>
 		<filter-name>struts-cleanup</filter-name>
-		<filter-class>
-			org.apache.struts2.dispatcher.ActionContextCleanUp
-		</filter-class>
+		<filter-class>org.apache.struts2.dispatcher.ActionContextCleanUp</filter-class>
 	</filter>
 	<!-- 配置filter拦截的URL -->
 	<filter-mapping>
@@ -66,21 +63,19 @@
 		<filter-name>struts-cleanup</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
+
 	<servlet>
-      <servlet-name>ConnectorServlet</servlet-name>
-        <servlet-class>
-          net.fckeditor.connector.ConnectorServlet
-      </servlet-class>
-      <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-      <servlet-name>ConnectorServlet</servlet-name>
-      <url-pattern>
+		<servlet-name>ConnectorServlet</servlet-name>
+		<servlet-class>net.fckeditor.connector.ConnectorServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ConnectorServlet</servlet-name>
+		<url-pattern>
         /fckeditor/editor/filemanager/connectors/*
       </url-pattern>
-    </servlet-mapping>
-  <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
+	</servlet-mapping>
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
 </web-app>
