--- a/trunk/Hope/.classpath
+++ b/trunk/Hope/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-logging-api-1.1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/spring.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/wave-robot-api-20090916.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
